# horde-worker-reGen

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  README_advanced.md  bridgeData_template.yaml  convert_config_to_env.py  download_micromamba.ps1  download_models.py  environment.linux.yaml  environment.rocm.yaml  environment.windows.yaml  environment.yaml  horde-bridge-amd.cmd  horde-bridge-directml.cmd  horde-bridge-rocm.sh  horde-bridge.cmd  horde-bridge.sh  load_env_vars.py  mkdocs.yml  model-stats.py  mypy.ini  preload-models.cmd  preload-models.sh  pyproject.toml  requirements.118.txt  requirements.amd.txt  requirements.dev.txt  requirements.directml.txt  requirements.docs.txt  requirements.hordelib.txt  requirements.rocm.txt  requirements.txt  run_worker.py  runtime-rocm.sh  runtime.cmd  runtime.sh  (+8 more)
.github/workflows/: maintests.yml  prtests.yml
Dockerfiles/: Dockerfile.12.1.1-22.04  Dockerfile.12.2.2-22.04  Dockerfile.12.3.2-22.04  Dockerfile.12.4-22.04  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.rocm-6.0.2  README.md  compose.cuda.yaml  compose.rocm.yaml  entrypoint.sh  setup_rocm.sh
docs/: .pages  build_docs.py  index.md
docs/horde_worker_regen/: .pages  consts.md  download_models.md  load_env_vars.md  localize.md  run_worker.md  version_meta.md
docs/horde_worker_regen/assets/: .pages
docs/horde_worker_regen/bridge_data/: .pages  data_model.md  load_config.md
docs/horde_worker_regen/locale_info/: .pages  regen_bridge_data_fields.md
docs/horde_worker_regen/process_management/: .pages  _aliased_types.md  _dummy_jobs.md  horde_process.md  inference_process.md  main_entry_point.md  messages.md  process_manager.md  safety_process.md  util.md  worker_entry_points.md
docs/horde_worker_regen/process_management/process_manager/: .pages
docs/stylesheets/: extra.css
horde_worker_regen/: __init__.py  _version_meta.json  consts.py  download_models.py  load_env_vars.py  localize.py  run_worker.py  version_meta.py
horde_worker_regen/amd_go_fast/: amd_go_fast.py  install_amd_go_fast.sh
horde_worker_regen/assets/: __init__.py
horde_worker_regen/bridge_data/: __init__.py  data_model.py  load_config.py
horde_worker_regen/locale_info/: README.md  __init__.py  regen_bridge_data_fields.py
horde_worker_regen/process_management/: __init__.py  _aliased_types.py  _dummy_jobs.py  horde_process.py  inference_process.py  main_entry_point.py  messages.py  process_manager.py  safety_process.py  util.py  worker_entry_points.py
logs/: README.md
models/: README.md
tests/: conftest.py  test_bridge_data.py  test_horde_dep_updates.py  test_pre_commit_dep_version.py  test_sdk_models.py  test_version_meta.py
