[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_worker_regen"
version = "0.1.0"
description = "Allows you to connect to the AI Horde and generate images for users."
authors = [
    {name = "db0", email = "mail@dbzer0.com"},
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
    {name = "Jug", email = "jugdev@proton.me"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "requests",
    "StrEnum",
    "loguru",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Development Status :: 2 - Pre-Alpha",
]

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/AI-Horde-Worker"
"Bug Tracker" = "https://github.com/Haidra-Org/AI-Horde-Worker"

[tool.setuptools.package-data]
tests = ["*.json"]

[tool.ruff]
line-length = 119
select = ["A", "I", "E", "W", "F", "UP", "YTT", "B", "C4", "PIE", "RET", "SIM"] #, "D", "ANN"] # FIXME
ignore = [
  # Ignore D rules for non-google docstring standard
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]

[tool.ruff.per-file-ignores]
"apimodels.py" = ["A003"]
# A003 - in dataclasses/pydantic, shadowing python builtin fields is OK for this project

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
 \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | _build
 | buck-out
 | build
 | dist
)/
'''

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
